# homeAssistent

./: README.md  my_db.db
homeAssistent/: BaseWgt.cpp  BaseWgt.h  BaseWgt.ui  CMakeLists.txt  DataBase.cpp  DataBase.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  MonitorWgt.cpp  MonitorWgt.h  MonitorWgt.ui  Notes.cpp  Notes.h  Notes.ui  PcStats.cpp  PcStats.h  PcStats.ui  WhetherWgt.cpp  WhetherWgt.h  WhetherWgt.ui  main.cpp
